--- a/Lead_Generator.ipynb
+++ b/Lead_Generator.ipynb
@@ -788,16 +788,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0e22e38a-9eb2-48c7-9b67-2826666a4fd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_reduced = df.loc[df.b_in_kontakt_gewesen==1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "23dc3896-0826-4cca-b0d6-6b092578e598",
    "metadata": {},
@@ -858,7 +848,7 @@
    "id": "8391d654-2155-4983-8e6c-e9dc61d54bbe",
    "metadata": {},
    "source": [
-    "To answer this question we choose a logistic regression. First of all, this allows us to judge whether the influence of the selected features are statistically significant. Given the small sample size this important to consider especially when aiming at the development of a predictive model for the priorization of customers in lead generation. For such a predictive model we run into the risk that the sample may not be representative or that the performance metrics resulting from an even smaller test set may not be representative either. However, if we find on the small sample statistically significant correlations between certain features and the target variable, we can be more confident in developing a model that is tuned for out-of-sample prediction. Note, for this first step I do not do a split into training and test sets but rather focus on the statistical significance therefore trying to get the most out of the small sample size."
+    "To answer this question we choose a logistic regression. First of all, this allows us to judge whether the influence of the selected features are statistically significant. Given the small sample size this important to consider especially when aiming at the development of a predictive model for the priorization of customers in lead generation. If we find on the small sample statistically significant correlations between certain features and the target variable, we can be more confident in developing a model that is tuned for out-of-sample prediction. Note, for this first step I do not do a split into training and test sets but rather focus on the statistical significance therefore trying to get the most out of the small sample size."
    ]
   },
   {
@@ -1095,7 +1085,7 @@
    "id": "1057fe79-1925-4a9b-959f-a3cbbf3c67ee",
    "metadata": {},
    "source": [
-    "We see that some features show a statistically significant correlation with the target variable (`b_specialisation_d:f`, `b_specialisation_j`, `q_2017 Average Household Size`, `q_Uni by Total Pop`, `q_2017 Personal Care: Per Capita`) which seems also to be supported by the simple visualization below (discrimination in target variable by these features). This gives a first hint that developing a predictive model based on potential customer's features may be a succesful endavour for coming with an automated priorization in lead generation."
+    "We see that some features show a statistically significant correlation with the target variable (`b_specialisation_d:f`, `b_specialisation_j`, `q_2017 Average Household Size`, `q_Uni by Total Pop`, `q_2017 Personal Care: Per Capita`) which seems also to be supported by the simple visualization below (discrimination in target variable by these features). This gives a first hint that developing a predictive model based on potential customer's features may be a succesful endavour for coming up with an automated priorization in lead generation. Nonetheless, the majority of features shows no statistically significant correlation with the target, so let us see whether we can develop a classifier capable of reliably distinguishing potential customers who make a purchase and those wo do not make a purchase."
    ]
   },
   {
@@ -1191,7 +1181,7 @@
     "In the following, we train four commonly used ML classification models for the purpose of testing whether the priorization of lead generation can be automated via a predictive model which reliably indicates which potential customers have a higher/lower probability to make purchases based on their features that are typically known at inferece. Our setup is as follows:\n",
     "- for the sake of comparability we train on both the oversampled and the original training data\n",
     "- we aim at approximating the best set of hyperparameters on validation sets using cross-validation in order to prevent overfitting\n",
-    "- we focus on optimizing the F1-Score for the minority group. In other words, our goal is to create a classification model that performs well in identifying the maximum number of leads who have made a purchase (Recall), while also ensuring that the leads predicted as having made a purchase actually have made a purchase (Precision).\n",
+    "- we focus on optimizing the F1-Score for the minority group. In other words, our goal is to create a classification model that performs well in identifying the maximum number of potential customers who have made a purchase (Recall), while also ensuring that the potential customers predicted as having made a purchase actually have made a purchase (Precision).\n",
     "- for scale sensitive models (Support Vector Machine) we scale the features by substracting their mean and dividing by their standard deviation"
    ]
   },
@@ -1289,6 +1279,14 @@
     "            'SAMPLING': strategy,\n",
     "            'PARAMS': grid_search.cv_results_['params'], \n",
     "            'MEAN_SCORE': grid_search.cv_results_['mean_test_score']})])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdfb59f7-22d5-4cc7-93f2-480ee0b01fb2",
+   "metadata": {},
+   "source": [
+    "For each model look at the best performing specification on the original validation sets and the oversampled validation sets."
    ]
   },
   {
@@ -1439,7 +1437,7 @@
     }
    ],
    "source": [
-    "md(f\"The best performing model is a {df_model.sort_values('MEAN_SCORE', ascending=False).iloc[0].MODEL} with an average F1-Score of {round(df_model.sort_values('MEAN_SCORE', ascending=False).iloc[0].MEAN_SCORE*100,2)}% on the validation folds. Little surprisingly, oversampling strongly helps the model to learn from the minority group since for all models the performance is best when being trained on the oversampled training data. The crucial question is how well the best performing model performs when being confronted with the real-world distribution of the target variable. For this purpose, we test the best model's performance on the test set.\")"
+    "md(f\"The best performing model is a {df_model.sort_values('MEAN_SCORE', ascending=False).iloc[0].MODEL} with an average F1-Score of {round(df_model.sort_values('MEAN_SCORE', ascending=False).iloc[0].MEAN_SCORE*100,2)}% on the validation folds. Little surprisingly, oversampling strongly helps the model to learn from the minority group since for all models (except Logistic Regression) the performance is best when being trained on the oversampled training data. The crucial question is how well the best performing model performs when being confronted with the real-world distribution of the target variable. For this purpose, we test the best model's performance on the test set.\")"
    ]
   },
   {
@@ -1487,9 +1485,9 @@
    "source": [
     "We can see that the best performing model does not generalize well:\n",
     "- from the 11 positive labels (potential customer made purchase) in the test data only 2 have been detected by the classifier (Recall = 2/11 = 0.18)\n",
-    "- for 23 leads in the test data the classifier has predicted that they make a purchase. Only 2 of them have indeed made a purchase (Precision = 2/23 = 0.09)\n",
+    "- for 23 potential customers in the test data the classifier has predicted that they make a purchase. Only 2 of them have indeed made a purchase (Precision = 2/23 = 0.09)\n",
     "\n",
-    "This means that when the classifier is confronted with the real distribution of target variable it does not help in reliably identifying those potential customer which end up making a purchase."
+    "This means that when the classifier is confronted with the real distribution of target variable it does not help in reliably identifying those potential customers which end up making a purchase."
    ]
   },
   {
